--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://cdn.stocksnap.io/img-thumbs/960w/ocean-water_MJDHNM1C0X.jpg">
+    <img src="https://cdn.stocksnap.io/img-thumbs/960w/ferry-boat_BBJC6KXOCM.jpg" alt="photo of a ferry boat">
+    <img src="https://cdn.stocksnap.io/img-thumbs/960w/beach-aerial_NPCFR4GDNF.jpg" alt="photo of a beach aerial" title="a relaxing beach photo">
   </body>
 </html>
